Atualização e Correções das Informações

--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -17,7 +17,8 @@
     <p>
         Kricktria é o mundo inicial da aventura que ocorre em GrandChase Dimensional Chaser, em que são introduzidos os
         novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br><br>
-        Essa mesma região não faz parte da dimensão de Ernas e Máusfia, além de ser composta por sete masmorras.
+        Essa mesma região não faz parte da dimensão de Ernas e Máusfia, sendo composta por seis masmorras e incluindo 
+        também a masmorra de ataque "Cerco de Teroka".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -29,7 +30,8 @@
         Ernas e Kricktria.<br><br>
         Suas únicas terras conhecidas são divididas em duas por um vórtice negro que ocupa o espaço eletrificado entre
         elas.<br><br>
-        Essa é a segunda região explorada pela GrandChase e consiste em quatro masmorras.
+        Essa é a segunda região explorada pela GrandChase e consiste em três masmorras, incluindo também a masmorra de 
+        ataque "Templo do Tempo".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -41,8 +43,8 @@
         eventualmente desapareceu ao longo da história.<br><br>
         No jogo original, os vestígios da destruição do reino de Calnat foram conhecidos através das masmorras "Ruínas
         de um Reino Antigo" e "Império de Astaroth".<br><br>
-        Em Grand Chase Dimensional Chaser, a versão de Calnat antes de sua destruição é a terceira região explorada pela
-        GrandChase e consiste em quatro masmorras.
+        Em GrandChase Dimensional Chaser, a versão de Calnat antes de sua destruição, é a terceira região explorada pela
+        GrandChase e consiste em três masmorras, incluindo também a masmorra de ataque "Grande Explosão de Calnat".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -53,7 +55,7 @@
         Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Ela ganhou seu homônimo do rio carmesim que
         atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
         Em GrandChase Dimensional Chaser, Crimsonriver é a quarta região explorada pela GrandChase e consiste em
-        quatro masmorras.
+        três masmorras, incluindo também a masmorra de ataque "Purgatório".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -62,23 +64,21 @@
     <img src="images/grandchase/mobile/maps/05_BurningCanyon.png" class="imagemMundos">
     <p>
         Burning Canyon é uma área localizada no Mundo dos Demônios, Elyos. Região a qual ganhou seu homônimo das plantas
-        existentes na área, as quais possuem uma cor vermelha ardente, que quando vistas de longe dão a impressão de que
+        existentes na área, as quais possuem uma cor vermelha ardente e quando vistas de longe dão a impressão de que
         todo o vale está em chamas.<br><br>
         Em GrandChase Dimensional Chaser, Burning Canyon é a quinta região explorada pela GrandChase e consiste em
-        quatro masmorras.<br><br>
-        Burning Canyon também se conecta ao Mundo dos Mortos por meio do "Expresso do Submundo", sendo uma dimensão
-        diferente de Elyos e Ernas.
+        três masmorras, incluindo também a masmorra de ataque "Expresso do Mundo dos Mortos".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
     <h3>Mundo 6</h3>
-    <h1>Mundo dos Mortos - Submundo</h1>
+    <h1>Mundo dos Mortos</h1>
     <img src="images/grandchase/mobile/maps/06_Underworld.png" class="imagemMundos">
     <p>
-        O Submundo é a terra dos mortos, em que muitas criaturas fugitivas como Nemophila, Vulcanus e Berkas se
-        originam, sendo também um mundo paralelo da dimensão de Ernas e uma dimensão separada do Mundo dos
+        O Mundo dos Mortos é uma região da qual muitas criaturas fugitivas como Nemophila, Vulcanus e Berkas se
+        originam, além de ser um mundo paralelo à existência de Ernas, também é uma dimensão separada do Mundo dos
         Demônios, Elyos.<br><br>
-        Em GrandChase Dimensional Chaser, o Submundo é a sexta região explorada pela GrandChase e consiste em
-        quatro masmorras.
+        Em GrandChase Dimensional Chaser, o Mundo dos Mortos é a sexta região explorada pela GrandChase e consiste 
+        em três masmorras, incluindo também a masmorra de ataque "Torre das Memórias".
     </p>
 </div>
