--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -15,9 +15,9 @@
     <h1>Kricktria</h1>
     <img src="images/grandchase/mobile/maps/01_Kricktria.png" class="imagemMundos">
     <p>
-        Kricktria é o mundo inicial da aventura que ocorre em GrandChase Dimensional Chaser, em que são introduzidos os
+        Kricktria é o mundo inicial da aventura que ocorre em GrandChase: Dimensional Chaser, em que são introduzidos os
         novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br><br>
-        Essa mesma região não faz parte da dimensão de Ernas e Máusfia, sendo composta por seis masmorras e incluindo 
+        Esta mesma região não faz parte da dimensão de Ernas e Máusfia, sendo composta por seis masmorras e incluindo 
         também a masmorra de ataque "Cerco de Teroka".
     </p>
 </div>
@@ -26,11 +26,11 @@
     <h1>Máusfia</h1>
     <img src="images/grandchase/mobile/maps/02_Mousepia.png" class="imagemMundos">
     <p>
-        Máusfia um outro mundo que aparece em GrandChase Dimensional Chaser, existindo em uma dimensão diferente de
+        Máusfia um outro mundo que aparece em GrandChase: Dimensional Chaser, existindo em uma dimensão diferente de
         Ernas e Kricktria.<br><br>
         Suas únicas terras conhecidas são divididas em duas por um vórtice negro que ocupa o espaço eletrificado entre
         elas.<br><br>
-        Essa é a segunda região explorada pela GrandChase e consiste em três masmorras, incluindo também a masmorra de 
+        Esta é a segunda região explorada pela GrandChase e consiste em três masmorras, incluindo também a masmorra de 
         ataque "Templo do Tempo".
     </p>
 </div>
@@ -43,8 +43,8 @@
         eventualmente desapareceu ao longo da história.<br><br>
         No jogo original, os vestígios da destruição do reino de Calnat foram conhecidos através das masmorras "Ruínas
         de um Reino Antigo" e "Império de Astaroth".<br><br>
-        Em GrandChase Dimensional Chaser, a versão de Calnat antes de sua destruição, é a terceira região explorada pela
-        GrandChase e consiste em três masmorras, incluindo também a masmorra de ataque "Grande Explosão de Calnat".
+        Esta versão de Calnat antes de sua destruição, é a terceira região explorada pela GrandChase e consiste em três 
+        masmorras, incluindo também a masmorra de ataque "Grande Explosão de Calnat".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -54,8 +54,8 @@
     <p>
         Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Ela ganhou seu homônimo do rio carmesim que
         atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
-        Em GrandChase Dimensional Chaser, Crimsonriver é a quarta região explorada pela GrandChase e consiste em
-        três masmorras, incluindo também a masmorra de ataque "Purgatório".
+        Além de ser a primeira região do Mundo dos Demônios explorada pela GrandChase, Crimsonriver é a quarta região
+        do jogo, sendo composta por três masmorras e incluindo também a masmorra de ataque "Purgatório".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -66,7 +66,7 @@
         Burning Canyon é uma área localizada no Mundo dos Demônios, Elyos. Região a qual ganhou seu homônimo das plantas
         existentes na área, as quais possuem uma cor vermelha ardente e quando vistas de longe dão a impressão de que
         todo o vale está em chamas.<br><br>
-        Em GrandChase Dimensional Chaser, Burning Canyon é a quinta região explorada pela GrandChase e consiste em
+        Em GrandChase: Dimensional Chaser, Burning Canyon é a quinta região explorada pela GrandChase e consiste em
         três masmorras, incluindo também a masmorra de ataque "Expresso do Mundo dos Mortos".
     </p>
 </div>
@@ -76,9 +76,9 @@
     <img src="images/grandchase/mobile/maps/06_Underworld.png" class="imagemMundos">
     <p>
         O Mundo dos Mortos é uma região da qual muitas criaturas fugitivas como Nemophila, Vulcanus e Berkas se
-        originam, além de ser um mundo paralelo à existência de Ernas, também é uma dimensão separada do Mundo dos
+        originam, além de ser um mundo paralelo à existência de Ernas, também é uma dimensão separada do Mundo dos 
         Demônios, Elyos.<br><br>
-        Em GrandChase Dimensional Chaser, o Mundo dos Mortos é a sexta região explorada pela GrandChase e consiste 
-        em três masmorras, incluindo também a masmorra de ataque "Torre das Memórias".
+        Sendo a primeira vez que a GrandChase tem contato com o Mundo dos Mortos, além de ser a sexta região do jogo 
+        sendo composta por em três masmorras e incluindo também a masmorra de ataque "Torre das Memórias".
     </p>
 </div>
