--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -17,7 +17,7 @@
     <p>
         Kricktria é o mundo inicial da aventura que ocorre em GrandChase: Dimensional Chaser, em que são introduzidos os
         novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br><br>
-        Esta mesma região não faz parte da dimensão de Ernas e Máusfia, sendo composta por seis masmorras e incluindo 
+        Esta mesma região não faz parte da dimensão de Ernas e Máusfia, além de ser composta por seis masmorras e incluindo 
         também a masmorra de ataque "Cerco de Teroka".
     </p>
 </div>
@@ -26,7 +26,7 @@
     <h1>Máusfia</h1>
     <img src="images/grandchase/mobile/maps/02_Mousepia.png" class="imagemMundos">
     <p>
-        Máusfia um outro mundo que aparece em GrandChase: Dimensional Chaser, existindo em uma dimensão diferente de
+        Máusfia é um outro mundo que aparece em GrandChase: Dimensional Chaser, existindo em uma dimensão diferente de
         Ernas e Kricktria.<br><br>
         Suas únicas terras conhecidas são divididas em duas por um vórtice negro que ocupa o espaço eletrificado entre
         elas.<br><br>
@@ -55,7 +55,7 @@
         Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Ela ganhou seu homônimo do rio carmesim que
         atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
         Além de ser a primeira região do Mundo dos Demônios explorada pela GrandChase, Crimsonriver é a quarta região
-        do jogo, sendo composta por três masmorras e incluindo também a masmorra de ataque "Purgatório".
+        do jogo e é composta por três masmorras, incluindo também a masmorra de ataque "Purgatório".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -78,7 +78,7 @@
         O Mundo dos Mortos é uma região da qual muitas criaturas fugitivas como Nemophila, Vulcanus e Berkas se
         originam, além de ser um mundo paralelo à existência de Ernas, também é uma dimensão separada do Mundo dos 
         Demônios, Elyos.<br><br>
-        Sendo a primeira vez que a GrandChase tem contato com o Mundo dos Mortos, além de ser a sexta região do jogo 
-        sendo composta por em três masmorras e incluindo também a masmorra de ataque "Torre das Memórias".
+        Essa foi a primeira vez que a GrandChase teve contato com o Mundo dos Mortos, sendo a sexta região do jogo 
+        e composta por em três masmorras, incluindo também a masmorra de ataque "Torre das Memórias".
     </p>
 </div>
