Melhoria de Coesão Textual e Ortografia

--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -15,7 +15,7 @@
     <h1>Kricktria</h1>
     <img src="images/grandchase/mobile/maps/01_Kricktria.png" class="imagemMundos">
     <p>
-        Kricktria é o mundo inicial da aventura que ocorre em GrandChase: Dimensional Chaser, em que são introduzidos os
+        Kricktria é o mundo inicial da aventura que ocorre em GrandChase: Dimensional Chaser, no qual foram introduzidos os
         novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br><br>
         Esta mesma região não faz parte da dimensão de Ernas e Máusfia, além de ser composta por seis masmorras e incluindo 
         também a masmorra de ataque "Cerco de Teroka".
@@ -30,7 +30,7 @@
         Ernas e Kricktria.<br><br>
         Suas únicas terras conhecidas são divididas em duas por um vórtice negro que ocupa o espaço eletrificado entre
         elas.<br><br>
-        Esta é a segunda região explorada pela GrandChase e consiste em três masmorras, incluindo também a masmorra de 
+        Esta é a segunda região explorada pela GrandChase e consiste em três masmorras, além de incluir a masmorra de 
         ataque "Templo do Tempo".
     </p>
 </div>
@@ -41,10 +41,10 @@
     <p>
         Calnat era um reino misterioso e altamente avançado em Arquimídia que se especializou em tecnologia mágica, mas
         eventualmente desapareceu ao longo da história.<br><br>
-        No jogo original, os vestígios da destruição do reino de Calnat foram conhecidos através das masmorras "Ruínas
+        No jogo original, os vestígios da destruição do reino de Calnat foram conhecidos por meio das masmorras "Ruínas
         de um Reino Antigo" e "Império de Astaroth".<br><br>
-        Esta versão de Calnat antes de sua destruição, é a terceira região explorada pela GrandChase e consiste em três 
-        masmorras, incluindo também a masmorra de ataque "Grande Explosão de Calnat".
+        Esta versão de Calnat, antes de sua destruição, é a terceira região explorada pela GrandChase e consiste em três 
+        masmorras, incluindo a masmorra de ataque "Grande Explosão de Calnat".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -52,10 +52,10 @@
     <h1>Mundo dos Demônios - Crimsonriver</h1>
     <img src="images/grandchase/mobile/maps/04_CrimsonRiver.png" class="imagemMundos">
     <p>
-        Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Ela ganhou seu homônimo do rio carmesim que
-        atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
+        Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Região a qual ganhou seu homônimo do rio carmesim 
+        que atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
         Além de ser a primeira região do Mundo dos Demônios explorada pela GrandChase, Crimsonriver é a quarta região
-        do jogo e é composta por três masmorras, incluindo também a masmorra de ataque "Purgatório".
+        do jogo, sendo composta por três masmorras e incluindo também a masmorra de ataque "Purgatório".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -67,7 +67,7 @@
         existentes na área, as quais possuem uma cor vermelha ardente e quando vistas de longe dão a impressão de que
         todo o vale está em chamas.<br><br>
         Em GrandChase: Dimensional Chaser, Burning Canyon é a quinta região explorada pela GrandChase e consiste em
-        três masmorras, incluindo também a masmorra de ataque "Expresso do Mundo dos Mortos".
+        três masmorras, além de incluir a masmorra de ataque "Expresso do Mundo dos Mortos".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -79,6 +79,6 @@
         originam, além de ser um mundo paralelo à existência de Ernas, também é uma dimensão separada do Mundo dos 
         Demônios, Elyos.<br><br>
         Essa foi a primeira vez que a GrandChase teve contato com o Mundo dos Mortos, sendo a sexta região do jogo 
-        e composta por em três masmorras, incluindo também a masmorra de ataque "Torre das Memórias".
+        e composta por em três masmorras, incluindo a masmorra de ataque "Torre das Memórias".
     </p>
 </div>
