Correção de Palavras

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -97,7 +97,7 @@
     <h1>Profecia dos 12 Discípulos</h1>
     <p>
         Existia uma profecia de que a paz iria voltar a Ernas com o sacrifício de 12 pessoas.<br><br>
-        O grupo da GrandChase que havia se reunido graças à profecia lutou contra Veigas, o Emissãrio da
+        O grupo da GrandChase que havia se reunido graças à profecia lutou contra Veigas, o Emissário da
         Destruição, que veio para destruir Ernas. Entretanto, durante esta batalha, Veigas percebeu que a
         profecia era falsa.
     </p>
