Adicionado Novas Informações (Lire e Arme)

--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -89,9 +89,16 @@
             <div class="descricaoPersonagem">
                 <h2>"A Elfa Amante da Paz da Ilha de Eryuell"</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate cumque adipisci
-                    officiis libero accusantium aperiam inventore commodi pariatur veniam consequatur exercitationem
-                    dolore culpa nam laborum consectetur voluptas, atque est.
+                    Lire nasceu na Ilha de Eryuell, e cresceu seguindo as tradições e costumes élficos de evitar conflitos 
+                    e viver sempre em harmonia. Com os presságios de mudanças no mundo, Lire gostava de pensar sobre um dia 
+                    se aventurar pelo mundo exterior.<br><br>
+                    Os Elfos de Eryuell eram conhecidos por suas habilidades de combate exemplares, mas o amor pela paz os 
+                    impedia de se misturarem nos conflitos humanos. Porém, depois de anos de guerra e a revelação que a 
+                    culpada pelos conflitos recentes era Cazeaje, os Elfos decidiram que não poderiam mais só observar e 
+                    aceitaram o pedido de ajuda da Rainha de Serdin.<br><br>
+                    Após ser selecioanda pela Rainha de Serdin, e carregando as preocupações e expectativas de seu povo nos 
+                    ombros, Lire deixou Eryuell e viajou em direção ao mundo exterior. Após ser apresentada pela Cavaleira 
+                    Comandante de Serdin, Lire conheceu Elesis e Arme.
                 </p>
             </div>
         </div>
@@ -116,9 +123,16 @@
             <div class="descricaoPersonagem">
                 <h2>"A Maga Genial da Guilda dos Magos Violeta"</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate cumque adipisci
-                    officiis libero accusantium aperiam inventore commodi pariatur veniam consequatur exercitationem
-                    dolore culpa nam laborum consectetur voluptas, atque est.
+                    Chamada de criança amaldiçoada graças à destruição que causava em sua vila, Arme nasceu com o poder mágico 
+                    muito além de seu controle. Seus pais, que não conseguiam mais lidar com a situação, a deixaram na porta 
+                    da Guilda dos Magos Violeta.<br><br>
+                    Desde cedo, mesmo sabendo que não poderia contar com seus pais, ela recebeu muito amor dos professores e o 
+                    Arquimago da guilda e se tornou uma criança feliz.<br><br>
+                    Muitos pensavam que Arme era preguiçosa devido ao seu imenso talento, mas a verdade é que ela trabalhava  
+                    duro para conseguir controlar seu poder mágico imenso, anormal para uma criança com sua idade.<br><br>
+                    No ano 1459 da Era dos Reinos, o Arquimago recebeu uma carta da Rainha de Serdin, e na manhã seguinte 
+                    Arme deixou a guilda para perseguir a culpada pela Guerra dos Reinos, Cazeaje. Neste dia ela encontrou 
+                    duas garotas na Floresta dos Desafios, Elesis e Lire, que mudariam seu destino para sempre.
                 </p>
             </div>
         </div>
