--- a/pages/mundos.html
+++ b/pages/mundos.html
@@ -15,10 +15,10 @@
     <h1>Kricktria</h1>
     <img src="images/grandchase/mobile/maps/01_Kricktria.png" class="imagemMundos">
     <p>
-        Kricktria é o mundo inicial da aventura que ocorre em GrandChase: Dimensional Chaser, no qual foram introduzidos os
-        novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br><br>
-        Esta mesma região não faz parte da dimensão de Ernas e Máusfia, além de ser composta por seis masmorras e incluindo 
-        também a masmorra de ataque "Cerco de Teroka".
+        Kricktria é o mundo inicial da aventura que ocorre em GrandChase: Dimensional Chaser, no qual foram introduzidos
+        os novos protagonistas Kyle e Cindy, ambos aprendizes do grande mago Caxias Grandiel.<br><br>
+        Esta mesma região não faz parte da dimensão de Ernas e Máusfia, além de ser composta por seis masmorras e
+        incluindo também a masmorra de ataque "Cerco de Teroka".
     </p>
 </div>
 <div class="fundoTextos slidesDiv divsFading">
@@ -30,7 +30,7 @@
         Ernas e Kricktria.<br><br>
         Suas únicas terras conhecidas são divididas em duas por um vórtice negro que ocupa o espaço eletrificado entre
         elas.<br><br>
-        Esta é a segunda região explorada pela GrandChase e consiste em três masmorras, além de incluir a masmorra de 
+        Esta é a segunda região explorada pela GrandChase e consiste em três masmorras, além de incluir a masmorra de
         ataque "Templo do Tempo".
     </p>
 </div>
@@ -43,7 +43,7 @@
         eventualmente desapareceu ao longo da história.<br><br>
         No jogo original, os vestígios da destruição do reino de Calnat foram conhecidos por meio das masmorras "Ruínas
         de um Reino Antigo" e "Império de Astaroth".<br><br>
-        Esta versão de Calnat, antes de sua destruição, é a terceira região explorada pela GrandChase e consiste em três 
+        Esta versão de Calnat, antes de sua destruição, é a terceira região explorada pela GrandChase e consiste em três
         masmorras, incluindo a masmorra de ataque "Grande Explosão de Calnat".
     </p>
 </div>
@@ -52,8 +52,8 @@
     <h1>Mundo dos Demônios - Crimsonriver</h1>
     <img src="images/grandchase/mobile/maps/04_CrimsonRiver.png" class="imagemMundos">
     <p>
-        Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Região a qual ganhou seu homônimo do rio carmesim 
-        que atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
+        Crimsonriver é uma área localizada no Mundo dos Demônios, Elyos. Região a qual ganhou seu homônimo do rio
+        carmesim que atravessa sua terra, sendo o rio mais longo e largo no Mundo do Demônio.<br><br>
         Além de ser a primeira região do Mundo dos Demônios explorada pela GrandChase, Crimsonriver é a quarta região
         do jogo, sendo composta por três masmorras e incluindo também a masmorra de ataque "Purgatório".
     </p>
@@ -76,9 +76,23 @@
     <img src="images/grandchase/mobile/maps/06_Underworld.png" class="imagemMundos">
     <p>
         O Mundo dos Mortos é uma região da qual muitas criaturas fugitivas como Nemophila, Vulcanus e Berkas se
-        originam, além de ser um mundo paralelo à existência de Ernas, também é uma dimensão separada do Mundo dos 
+        originam, além de ser um mundo paralelo à existência de Ernas, também é uma dimensão separada do Mundo dos
         Demônios, Elyos.<br><br>
-        Essa foi a primeira vez que a GrandChase teve contato com o Mundo dos Mortos, sendo a sexta região do jogo 
+        Essa foi a primeira vez que a GrandChase teve contato com o Mundo dos Mortos, sendo a sexta região do jogo
         e composta por em três masmorras, incluindo a masmorra de ataque "Torre das Memórias".
+    </p>
+</div>
+<div class="fundoTextos slidesDiv divsFading">
+    <h3>Mundo 7</h3>
+    <h1>Vermécia</h1>
+    <img src="images/grandchase/mobile/maps/07_Bermesiah.png" class="imagemMundos">
+    <p>
+        Vermécia é um dos maiores continentes presentes na dimensão de Ernas, o outro sendo Ellia. Antes de ser
+        dividido nos reinos de Serdin e Canaban no jogo clássico, Vermécia era a primeira região explorada pelos
+        jogadores e na qual começa a jornada da GrandChase.<br><br>
+        Em GrandChase: Dimensional Chaser, Vermécia é a sétima região explorada pela GrandChase e consiste em quatro
+        masmorras, dentre elas a masmorra de ataque "Torre da Extinção", sendo esse o último local aventurado pela
+        GrandChase antes dos eventos ocorridos que levaram a separação dos membros que a compõe e introduzindo ao
+        novo jogo da série GrandChase.
     </p>
 </div>
