Novas Informações (Lass e Ryan)

--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -157,9 +157,19 @@
             <div class="descricaoPersonagem">
                 <h2>"O Assassino Prateado com um Passado Sombrio"</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate cumque adipisci
-                    officiis libero accusantium aperiam inventore commodi pariatur veniam consequatur exercitationem
-                    dolore culpa nam laborum consectetur voluptas, atque est.
+                    Nascido na forma meio-humano e meio-demônio, de um pai desconhecido e uma mãe humana. O pai de Lass
+                    o abandonou assim que nasceu, e sua mãe foi rejeitada por ter um filho sinistro mesmo estando em exílio
+                    num refúgio para criminosos. Lass, eventualmente abandonado por sua mãe, foi capturado por um Circo
+                    e se tornou uma atração monstruosa.<br><br>
+                    Certo dia, Lass despertou um poder desconhecido e enlouquecidamente pôs o Circo em chamas, conquistando
+                    sua liberdade. Então, Lass viajou por Ernas, eventualmente encontrando o Herdeiro dos Assassinos, que o
+                    ensinou habilidades de combate. Após aprender tudo o que ele havia para ensinar, Lass criou a Guilda dos
+                    Assassinos e recebeu Assassinos Aprendizes.<br><br>
+                    Durante a Guerra dos Reinos, graças ao seu corpo de meio-humano e meio-demônio, Lass foi controlado por
+                    Cazeaje e eventualmente confrontou o grupo da GrandChase. Derrotado neste confronto, Lass escapa do controle
+                    de Cazeaje e se lembra de todos os males que seu corpo causou durante este tempo, e é tomado por um profundo
+                    arrependimento. Lass então se junta ao grupo da GrandChase para se redimir de seus crimes em uma nova jornada
+                    para derrotar o mal.
                 </p>
             </div>
         </div>
@@ -182,11 +192,18 @@
                     class="imagem" />
             </div>
             <div class="descricaoPersonagem">
-                <h2>"O Druída Guardião da Natureza"</h2>
+                <h2>"O Druida Guardião da Natureza"</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum cupiditate cumque adipisci
-                    officiis libero accusantium aperiam inventore commodi pariatur veniam consequatur exercitationem
-                    dolore culpa nam laborum consectetur voluptas, atque est.
+                    Ryan nasceu no ano de 1444 dentro da Floresta dos Elfos, ao lado da Árvore Mãe que protegia o Continente de
+                    Vermécia. Logo cedo, Ryan foi influenciado pelo ardente desejo compartilhado por sua tribo de querer proteger
+                    a natureza. Quando cresceu, sua habilidade de se comunicar com o mundo natural se tornou mais forte do que
+                    qualquer outro de sua tribo, e ele adquiriu a capacidade de sentir mudanças em emoções.<br><br>
+                    Durante a Guerra dos Reinos, a Floresta dos Elfos foi envolvida na batalha, e foi só quando a protegia que
+                    Ryan percebeu que precisava fazer mais do que só proteger a natureza.<br><br>
+                    Um dia, enquanto lutava contra um monstro que havia invadido a floresta, a GrandChase apareceu e o ajudou. Ryan
+                    então descobriu que o grupo estava perseguindo Cazeaje, a culpada por todos os seus problemas.<br><br>
+                    Para que sua terra natal nunca mais sofresse, ele decidiu que Cazeaje precisava ser derrotada, e se juntou à
+                    GrandChase.
                 </p>
             </div>
         </div>
